# conveyor

./: .gitignore  README.md  benchmark.md  pyproject.toml
.github/workflows/: publish.yml
examples/: face_recognition.py  light_on_ocr_pipeline.py  quickstart.py  stable_diffusion.py  stable_diffusion_i2i.py  stable_diffusion_t2i.py  yolo_detection.py
src/conveyor/: __init__.py  batch_stage.py  config.py  metrics.py  pipeline.py  progress.py  server.py  stage.py  tracker.py  types.py
