[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conveyor"
version = "1.0.0"
description = "Streaming inference pipeline with stage-level parallelism and dynamic batching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["inference", "pipeline", "batching", "gpu", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/conveyor"]
